Change profile image from photo.png to photo.jpg

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- HEADER -->
     <div class="header">
         <div class="profile">
-            <img src="photo.png" alt="Profile">
+            <img src="photo.jpg" alt="Profile">
             <div class="title">NTS Grow</div>
         </div>
 
